--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@reduxjs/toolkit": "^2.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
